--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,36 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# compiled output
-dist/
-site/
-tmp/
-out-tsc/
-publish/
-integration/**/lib/
-integration/**/*.ngfactory.ts
-integration/**/*.ngsummary.json
-schematics/demo
-schematics/utils/custom-theme.ts
-schematics/utils/lib-versions.ts
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
-node_modules.*/
-package-lock.json
-integration/**/package-lock.json
-yarn.lock
+/node_modules
+/.pnp
+.pnp.js
 
-# IDEs and editors
-.idea/
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
+# testing
+/coverage
 
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+# next.js
+/.next/
+/out/
+
+# production
+/build
 
 # misc
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
-npm-debug.log
-testem.log
-/typings
-yarn-error.log
-
-# e2e
-/e2e/*.js
-/e2e/*.map
-
-# System Files
+.idea
 .DS_Store
-Thumbs.db
+*.pem
 
-# assets
-upload/
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
