--- a/package.json
+++ b/package.json
@@ -1,49 +1,44 @@
 {
-  "name": "blog-react",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "name": "tailwindui-template",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server  --inline --history-api-fallback"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "bookmarks": "node src/scripts/make-bookmark.js"
   },
+  "browserslist": "defaults, not ie <= 11",
   "dependencies": {
-    "body-parser": "^1.17.1",
-    "ejs": "^2.5.6",
-    "express": "^4.0.0",
-    "express-partials": "^0.3.0",
-    "express-session": "^1.15.2",
-    "jquery": "^2.2.4",
-    "jquery-lazyload": "^1.9.7",
-    "medium-zoom": "^0.1.3",
-    "mongoose": "^4.9.8",
-    "multer": "^1.3.0",
-    "simditor": "^2.3.6",
-    "utility": "^1.12.0"
+    "@headlessui/react": "^1.7.13",
+    "@mapbox/rehype-prism": "^0.9.0",
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.4",
+    "@tailwindcss/typography": "^0.5.4",
+    "@types/node": "^20.10.8",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
+    "@types/webpack-env": "^1.18.1",
+    "autoprefixer": "^10.4.12",
+    "cheerio": "^1.0.0-rc.12",
+    "clsx": "^2.1.0",
+    "fast-glob": "^3.2.11",
+    "feed": "^4.2.2",
+    "next": "^14.0.4",
+    "next-themes": "^0.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "remark-gfm": "^4.0.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   },
-  "author": "cwq",
-  "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^7.0.1",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "html-webpack-plugin": "^2.28.0",
-    "jsx-loader": "^0.13.2",
-    "less": "^2.3.1",
-    "less-loader": "^4.0.3",
-    "postcss-loader": "^2.0.5",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-redux": "^5.0.4",
-    "react-router": "^3.0.5",
-    "redux": "^3.6.0",
-    "style-loader": "^0.18.1",
-    "webpack": "^2.5.1",
-    "webpack-dev-server": "^2.4.5"
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "sharp": "0.33.1"
   }
 }
